--- a/css/flights.css
+++ b/css/flights.css
@@ -38,3 +38,13 @@ tbody tr {
 tbody tr:hover {
   background: #014055;
 }
+.slider_area::before {
+  background: #001D38;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  opacity: .6;
+}
