--- a/css/style.css
+++ b/css/style.css
@@ -5931,6 +5931,7 @@ h6 {
   line-height: 40px;
   text-transform: uppercase;
   font-weight: 500;
+  text-align: right;
 }
 
 /* line 387, ../../Arafath/CL/CL October/217. Real Estate/HTML/scss/_elements.scss */
